Fixed header spacing

--- a/style.css
+++ b/style.css
@@ -19,10 +19,14 @@ h2{
 }
 
 h3{
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 100;
     text-align: center;
-    letter-spacing: 5px;
+    letter-spacing: 10px;
+}
+
+.subHead{
+  margin-top: -40px;
 }
 
 p{
